Server Go/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: gol-service1
spec:
  selector:
    app: gol
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
