Server Go/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gol-service
spec:
  selector:
    app: gol
  ports:
    - port: 8000
      targetPort: 8000
  type: LoadBalancer
